--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="https://images.pexels.com/photos/1105766/pexels-photo-1105766.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="https://images.pexels.com/photos/1007025/pexels-photo-1007025.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -97,7 +97,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://images.pexels.com/photos/1680140/pexels-photo-1680140.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://images.pexels.com/photos/1710795/pexels-photo-1710795.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="https://images.pexels.com/photos/1089843/pexels-photo-1089843.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer blue">
